--- a/server/gqlgen.yml
+++ b/server/gqlgen.yml
@@ -66,7 +66,7 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-#  - "github.com/aman-lf/event-management/graph/model"
+  - "github.com/aman-lf/event-management/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
@@ -85,3 +85,10 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
+  Participant:
+    model: github.com/aman-lf/event-management/graph/model.Participant
+    fields:
+      user:
+        resolver: true
+      event:
+        resolver: true
